--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
 .App {
-  text-align: center;
+  text-align: center !important;
 }
+.textLighter{
+  font-weight: lighter;
+  color: rgb(255, 255, 255);
+  text-shadow: rgb(198, 10, 10) 2px 1px;
+  background-color: rgba(98, 8, 86,0.9) ;
+  border-radius: 4px 42px 4px 32px ;
+  padding: 18px ;
+  box-shadow: orangered 2px 8px;
+  z-index: 0 !important;
+  font-size: 18px;
+  width: fit-content;
+  margin: auto !important;
+  margin-top: 10px !important;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+header{
+  font-size: medium;
   color: white;
+  text-shadow: rgb(198, 10, 10) 2px 1px;
+  background-color: rgba(22, 21, 21, 0.9) ;
+  border-radius: 8px 52px ;
+  padding: 4px ;
+  box-shadow: orangered 2px 8px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media(min-width:576px){
+  .App{
+   width: fit-content !important;
+    margin: auto;
+   
   }
 }
